# diy-flash-attention

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PUBLISH_CHECKLIST.md  README.en.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
.kiro/specs/diy-flash-attention/: design.md  requirements.md  tasks.md
.omc/: project-memory.json
.omc/state/: agent-replay-6ecb3d52-d067-43a4-9daf-145bd1996c34.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/sessions/6ecb3d52-d067-43a4-9daf-145bd1996c34/: autopilot-state.json
benchmarks/: CLAUDE.md  __init__.py  bench_flash.py  bench_matmul.py
changelog/: 2026-03-10-pages-optimization.md  CHANGELOG.md  CHANGELOG.zh-CN.md  README.md
changelog/archive/: 2024-12-31_initial-release.md  2025-02-27_python-version-fix.md  2025-02-27_spec-documentation-sync.md  2025-02-27_test-coverage-enhancement.md  2026-03-10-pages-optimization.md  2026-03-10_workflow-deep-standardization.md  2026-04-16_workflow-fix-docs-overhaul.md  README.md
dev/: GITHUB_PAGES_ULTRA_MODERN_SUMMARY.md  PUBLISH_CHECKLIST.md  RELEASE_COMMANDS.md
docs/: CLAUDE.md  algorithm.md  api.md  architecture.md  changelog.md  cheatsheet.md  faq.md  index.md  knowledge-map.md  learning-path.md  package.json  paper-guide.md  performance.md  tensor-layout.md  tutorial.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  index.ts  style.css
docs/.vitepress/theme/components/: ArchitectureDiagram.vue  BenchmarkChart.vue  CodeCopy.vue  FlashAttentionVisualizer.vue  GpuArchitectureVisualizer.vue  ThemeAwareFigure.vue
docs/en/: algorithm.md  api.md  architecture.md  changelog.md  faq.md  index.md  performance.md  tutorial.md
docs/public/: manifest.json  offline.html  sw.js
docs/zh/: algorithm.md  api.md  architecture.md  changelog.md  cheatsheet.md  faq.md  index.md  knowledge-map.md  learning-path.md  paper-guide.md  performance.md  tensor-layout.md  tutorial.md
examples/: CLAUDE.md  __init__.py  advanced_usage.py  block_size_experiment.py  quick_start.py  visualize_tiling.py
kernels/: CLAUDE.md  __init__.py  backend_selector.py  flash_attn.py  flash_attn_v2.py  mask_dsl.py  matmul.py  modern_features.py  persistent_kernels.py
openspec/: CLAUDE.md  config.json
openspec/changes/archive-ready-finalization/: proposal.md  tasks.md
openspec/changes/archive/2026-05-15-docs-academy-pages/: design.md  tasks.md
openspec/changes/archive/2026-05-15-docs-academy-pages/specs/project-surface/: spec.md
openspec/changes/archive/archive-ready-finalization/: design.md
openspec/changes/archive/archive-ready-finalization/specs/project-surface/: spec.md
openspec/changes/archive/kernel-modernization/: tasks.md
openspec/changes/archive/kernel-modernization/specs/: attention-mask-dsl.md  kernel-selector.md
openspec/changes/archive/stabilize-project-for-archive/: design.md  proposal.md  tasks.md
openspec/changes/archive/stabilize-project-for-archive/specs/flashattention-kernels/: spec.md
openspec/changes/archive/stabilize-project-for-archive/specs/project-governance/: spec.md
openspec/changes/archive/stabilize-project-for-archive/specs/project-surface/: spec.md
openspec/changes/docs-academy-pages/: design.md  proposal.md  tasks.md
openspec/changes/docs-academy-pages/specs/project-surface/: spec.md
openspec/changes/finalize-archive-ready-repo/: design.md  proposal.md  tasks.md
openspec/changes/finalize-archive-ready-repo/specs/engineering-workflow/: spec.md
openspec/changes/finalize-archive-ready-repo/specs/project-governance/: spec.md
openspec/changes/finalize-archive-ready-repo/specs/project-surface/: spec.md
openspec/changes/kernel-modernization/: design.md  proposal.md  tasks.md
openspec/changes/kernel-modernization/specs/: flash-attention-v2.md  persistent-kernels.md  profiling-toolkit.md
openspec/changes/stabilize-project-for-archive/specs/engineering-workflow/: spec.md
openspec/specs/: README.md
openspec/specs/engineering-workflow/: spec.md
openspec/specs/flashattention-kernels/: spec.md
openspec/specs/project-governance/: spec.md
openspec/specs/project-surface/: spec.md
openspec/templates/: bugfix.md  feature.md  rfc.md
scripts/: run_all_benchmarks.py  sync-changelog.sh
specs/: README.md
specs/product/: flash-attention-prd.md
specs/rfc/: 0001-core-architecture.md
specs/testing/: flash-attention.feature
tests/: CLAUDE.md  __init__.py  conftest.py  test_backend_selector.py  test_benchmark.py  test_docs_surface.py  test_error_handling.py  test_flash.py  test_flash_v2.py  test_gpu_detect.py  test_mask_dsl.py  test_matmul.py  test_modern_features.py  test_persistent.py  test_profiling.py  test_properties.py  test_validation.py
utils/: CLAUDE.md  __init__.py  benchmark.py  config.py  gpu_detect.py  logging_config.py  profiling.py  triton_helpers.py  validation.py
